# anagram

./: .gitignore  Cargo.toml  readme.md
resources/: anagram
src/: main.rs
wip/: anagram_word_list.txt
